# GEM

./: .gitignore  .gitmodules  404.html  CHANGELOG.md  CLAUDE.md  Cargo.toml  NOTICE  README.md  adding-a-pdk.html  book.toml  build.rs  handoff-discipline.html  index.html  print.html  pyproject.toml  searchindex.js  searchindex.json  simulation-architecture.html  timing-model-extensions.html  timing-simulation.html  timing-violations.html  toc.html  toc.js  troubleshooting-vcd.html  usage.html  usage.md  why-jacquard.html
.github/workflows/: ci.yml  mcu-soc-rebuild.yml
aigpdk/: gem_formal.v  memlib_yosys_behavior_oneport.v
api/: crates.js  help.html  settings.html  src-files.js
api/gem/: all.html  index.html
api/jacquard/: all.html  index.html  sidebar-items.js
api/search.index/: 0094418e408a.js  00a9999111e7.js  00ab571a2395.js  00e2f354a5f4.js  00ffc512a348.js  01048faf036a.js  013639c70e61.js  013c239c8453.js  016d45260214.js  01a787bb8533.js  01ac7f762b96.js  01c80b40ab86.js  01cc985cbc94.js  01d99a5949d5.js  01eb90d46156.js  01f9902131e4.js  020e012e7d96.js  02187c893eb5.js  022a6ae3849a.js  022b9710155d.js  023f75241ba4.js  0270ad4d2db4.js  0272b4f17662.js  027eb59c85dc.js  028045cfeaf1.js  02b1dc3e5192.js  02bf467a8c16.js  02c838ce3f20.js  033c0a345f02.js  0343db6ad009.js  03479ae7c3bf.js  03486aa38177.js  03769aa36a66.js  (+1539 more)
benches/: event_buffer.rs  xprop.rs
benchmarks/: jacquard.toml
crates/opensta-to-ir/: Cargo.toml
crates/opensta-to-ir/src/: builder.rs  dump.rs  lib.rs  main.rs  opensta.rs
crates/opensta-to-ir/tcl/: dump_timing.tcl
crates/opensta-to-ir/tests/: build_ir.rs  cli.rs  corpus.rs  dump_parser.rs  locate_and_check.rs  opensta_integration.rs
crates/timing-ir/: Cargo.toml  README.md
crates/timing-ir/schemas/: timing_ir.fbs
crates/timing-ir/src/: diff.rs  lib.rs  timing_ir_generated.rs
crates/timing-ir/tests/: diff.rs  roundtrip.rs
csrc/: kernel_v1.cu  kernel_v1.hip.cpp  kernel_v1.metal  kernel_v1_impl.cuh  spiflash_model.cc  spiflash_model.h
docs/: README.md  SUMMARY.md  adding-a-pdk.md  cli-api-audit.md  config-format.md  cosim-timing-support.md  enable-cuda-hip-timing.md  handoff-discipline.md  project-scope.md  release-process.md  selective-x-propagation.md  simulation-architecture.md  timing-correctness.md  timing-model-extensions.md  timing-simulation.md  timing-validation.md  timing-violations.md  troubleshooting-vcd.md  usage.md  why-jacquard.md
examples/: liberty_bench.rs
scripts/: build-opensta.sh  chipflow_build.py  compare_timing.py  gen_sim_config.py  regenerate-corpus-goldens.sh  sdf_trace.py  wrap_openframe.py
src/: aig.rs  config.rs  event_buffer.rs  flatten.rs  lib.rs  liberty_parser.rs  pe.rs  repcut.rs  sdf_parser.rs  sky130.rs  sky130_decomp.rs  sky130_pdk.rs  staging.rs  testbench.rs  timing_report.rs
tests/: cxxrtl_client_test.py
(+663 files in other folders)
