[package]
name = "timing-ir"
version = "0.1.0"
edition = "2021"
description = "Jacquard timing intermediate representation (IR) for SDF-equivalent annotations. See docs/adr/0002-timing-ir.md."
license = "Apache-2.0"
repository = "https://github.com/chipflow/Jacquard"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "timing-ir-diff"
path = "src/bin/timing-ir-diff.rs"

[dependencies]
# Pin matches the flatc major used for code generation (see README dependencies).
flatbuffers = "25"
# CLI parsing for timing-ir-diff. Matches the derive style used in jacquard.
clap = { version = "4.5", features = ["derive"] }
# JSON output format for CI consumption.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"
